--- a/voxelization.ipynb
+++ b/voxelization.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,40 +218,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of voxels: 10944\n",
-      "Time taken to voxelize: 45.2474 seconds\n"
+      "Total number of voxels: 14196\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81b2777c828d44acbb215a5259712935",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52386/index.html?ui=P_0x1cc31ec5c30_0&reconnect=auto' style='width…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nnum_points = grid.cell_centers().n_points\\n\\n# Calculate difference\\ndiff_mask = mask != mask2\\n\\n# Get indices where masks differ\\nindices = np.where(diff_mask)[0]\\n\\nmask_dif = np.zeros(num_points, dtype=bool)\\nfor n in range(num_points):\\n    if n in indices:\\n        mask_dif[n] = True'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m voxel_size \u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[39m# Voxelize the entire space of the combined mesh\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m grid, mask2, cell_info \u001b[39m=\u001b[39m voxelize_space(all_meshes, voxel_size, info)\n\u001b[0;32m     13\u001b[0m \u001b[39m# Prepare to store cell-IFC-object mappings\u001b[39;00m\n\u001b[0;32m     14\u001b[0m cell_data \u001b[39m=\u001b[39m {}\n",
+      "Cell \u001b[1;32mIn[9], line 27\u001b[0m, in \u001b[0;36mvoxelize_space\u001b[1;34m(meshes, voxel_size, mesh_info)\u001b[0m\n\u001b[0;32m     22\u001b[0m mesh_bounds \u001b[39m=\u001b[39m mesh\u001b[39m.\u001b[39mbounds\n\u001b[0;32m     25\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_points):\n\u001b[1;32m---> 27\u001b[0m     cell \u001b[39m=\u001b[39m grid\u001b[39m.\u001b[39;49mextract_cells(i)\n\u001b[0;32m     28\u001b[0m     cell_bounds \u001b[39m=\u001b[39m cell\u001b[39m.\u001b[39mbounds         \n\u001b[0;32m     30\u001b[0m     \u001b[39mif\u001b[39;00m boxes_touch(mesh_bounds, cell_bounds):\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\filters\\data_set.py:4547\u001b[0m, in \u001b[0;36mDataSetFilters.extract_cells\u001b[1;34m(self, ind, invert, progress_bar)\u001b[0m\n\u001b[0;32m   4545\u001b[0m \u001b[39m# extracts only in float32\u001b[39;00m\n\u001b[0;32m   4546\u001b[0m \u001b[39mif\u001b[39;00m subgrid\u001b[39m.\u001b[39mn_points:\n\u001b[1;32m-> 4547\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpoints\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mdtype(\u001b[39m'\u001b[39m\u001b[39mfloat32\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m   4548\u001b[0m         ind \u001b[39m=\u001b[39m subgrid\u001b[39m.\u001b[39mpoint_data[\u001b[39m'\u001b[39m\u001b[39mvtkOriginalPointIds\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m   4549\u001b[0m         subgrid\u001b[39m.\u001b[39mpoints \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpoints[ind]\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\dataset.py:409\u001b[0m, in \u001b[0;36mDataSet.points\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    407\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mSetPoints(vtkpts)\n\u001b[0;32m    408\u001b[0m     _points \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mGetPoints()\u001b[39m.\u001b[39mGetData()\n\u001b[1;32m--> 409\u001b[0m \u001b[39mreturn\u001b[39;00m pyvista_ndarray(_points, dataset\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\pyvista_ndarray.py:55\u001b[0m, in \u001b[0;36mpyvista_ndarray.__new__\u001b[1;34m(cls, array, dataset, association)\u001b[0m\n\u001b[0;32m     53\u001b[0m     obj \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(array)\u001b[39m.\u001b[39mview(\u001b[39mcls\u001b[39m)\n\u001b[0;32m     54\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(array, _vtk\u001b[39m.\u001b[39mvtkAbstractArray):\n\u001b[1;32m---> 55\u001b[0m     obj \u001b[39m=\u001b[39m convert_array(array)\u001b[39m.\u001b[39;49mview(\u001b[39mcls\u001b[39;49m)\n\u001b[0;32m     56\u001b[0m     obj\u001b[39m.\u001b[39mVTKObject \u001b[39m=\u001b[39m array\n\u001b[0;32m     57\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\pyvista_ndarray.py:81\u001b[0m, in \u001b[0;36mpyvista_ndarray.__array_finalize__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[39m# this is necessary to ensure that views/slices of pyvista_ndarray\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[39m# objects stay associated with those of their parents.\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[39m# convention, but here we just map those over to the appropriate\u001b[39;00m\n\u001b[0;32m     79\u001b[0m \u001b[39m# attributes of this class\u001b[39;00m\n\u001b[0;32m     80\u001b[0m _vtk\u001b[39m.\u001b[39mVTKArray\u001b[39m.\u001b[39m__array_finalize__(\u001b[39mself\u001b[39m, obj)\n\u001b[1;32m---> 81\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39;49mshares_memory(\u001b[39mself\u001b[39;49m, obj):\n\u001b[0;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39mdataset\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     83\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39massociation \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39massociation\u001b[39m\u001b[39m'\u001b[39m, FieldAssociation\u001b[39m.\u001b[39mNONE)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
