--- a/voxelization_parallel.ipynb
+++ b/voxelization_parallel.ipynb
@@ -23,10 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
     "import pyvista as pv\n",
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
@@ -50,10 +52,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def process_mesh(args):\n",
+    "    grid, voxel_size, guid, mesh_data, mask, cell_to_guid = args\n",
+    "\n",
+    "    mesh = mesh_data['Geo']\n",
+    "    mesh_bounds = mesh.bounds\n",
+    "\n",
+    "    # Find the indices of the cells that fall into the bounds of the current mesh\n",
+    "    cell_indices = find_cells_in_bounds(grid, mesh_bounds, voxel_size)\n",
+    "\n",
+    "    # Step 3: Use the cell indices to check which cells need further proofing\n",
+    "    for cell_index in cell_indices:\n",
+    "        cell = grid.extract_cells([cell_index])\n",
+    "        cell_bounds = cell.bounds\n",
+    "\n",
+    "        if boxes_touch(mesh_bounds, cell_bounds):\n",
+    "            if not mask[cell_index]:\n",
+    "                mask[cell_index] = True\n",
+    "                cell_to_guid[cell_index] = guid\n",
+    "\n",
+    "    return mask, cell_to_guid\n",
+    "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "    faces=np.array(faces, dtype=np.int16)\n",
     "    num_insertions = (len(faces) - 1) // 3\n",
@@ -190,15 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def voxelize_space(meshes, mesh_info):\n",
-    "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
     "    start_time = time.time()\n",
     "    voxel_size = 0.3\n",
-    "    # Step 1: Create a uniform grid within the bounds of all meshes\n",
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "    \n",
     "    end_time = time.time()\n",
@@ -210,31 +231,23 @@
     "\n",
     "    start_time = time.time()\n",
     "\n",
-    "    \n",
     "    print(f'number of cells: {num_points}')\n",
-    "    \n",
-    "    # Step 2: Iterate through the meshes in the scene\n",
-    "    for guid, mesh_data in mesh_info.items():\n",
-    "        \n",
-    "        mesh = mesh_data['Geo']\n",
-    "        mesh_bounds = mesh.bounds\n",
-    "        \n",
-    "        # Find the indices of the cells that fall into the bounds of the current mesh\n",
-    "        cell_indices = find_cells_in_bounds(grid, mesh_bounds, voxel_size)\n",
-    "        \n",
-    "        # Step 3: Use the cell indices to check which cells need further proofing\n",
-    "        for cell_index in cell_indices:\n",
-    "            cell = grid.extract_cells([cell_index])\n",
-    "            cell_bounds = cell.bounds\n",
     "\n",
-    "            if boxes_touch(mesh_bounds, cell_bounds):\n",
-    "                if not mask[cell_index]:\n",
-    "                    mask[cell_index] = True\n",
-    "                    cell_to_guid[cell_index] = guid\n",
-    "                    \n",
+    "    # Prepare arguments for parallel processing\n",
+    "    args_list = [(grid, voxel_size, guid, mesh_data, mask, cell_to_guid) for guid, mesh_data in mesh_info.items()]\n",
+    "\n",
+    "    # Parallel execution\n",
+    "    with ThreadPoolExecutor() as executor:\n",
+    "        results = executor.map(process_mesh, args_list)\n",
+    "\n",
+    "    # Combine results\n",
+    "    for res in results:\n",
+    "        mask |= res[0]  # Combine masks using bitwise OR\n",
+    "        cell_to_guid.update(res[1])  # Update cell_to_guid dictionary\n",
+    "\n",
     "    end_time = time.time()\n",
     "    print(f\"Time taken to voxelize: {end_time - start_time:.4f} seconds\")        \n",
-    "                            \n",
+    "\n",
     "    return grid, mask, cell_to_guid\n"
    ]
   },
@@ -247,15 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to import ifc objects: -0.1136 seconds\n",
-      "Time taken to create the initial grid: 0.0000 seconds\n",
+      "Time taken to import ifc objects: -0.1306 seconds\n",
+      "Time taken to create the initial grid: 0.0010 seconds\n",
       "number of cells: 4860\n",
       "mesh bounds: (-2.306903294088416, 2.293096705911564, -2.659084903543768, 1.953415096456222, -0.48, 0.0)\n",
       "voxel size: 0.3\n",
@@ -9517,18 +9530,18 @@
       "cell index: 3683\n",
       "i, j, k: 16, 3, 11\n",
       "cell index: 4044\n",
-      "Time taken to voxelize: 4.7259 seconds\n"
+      "Time taken to voxelize: 4.8922 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df70e32bd2b3414eb15a7f1da395c5ee",
+       "model_id": "5ac69f1152bd4fde9645da35976022fa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:54274/index.html?ui=P_0x1921c06e710_36&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:55539/index.html?ui=P_0x1f972b53010_1&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
