--- a/voxelization_meshbounds.ipynb
+++ b/voxelization_meshbounds.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,10 +150,10 @@
     "\n",
     "    # Get the dimensions of the grid\n",
     "    dims = grid.dimensions\n",
-    "    print(f'mesh bounds: {mesh_bounds}')\n",
+    "    '''print(f'mesh bounds: {mesh_bounds}')\n",
     "    print(f'voxel size: {voxel_size}')\n",
     "    print(f'grid bounds: {grid_bounds}')\n",
-    "    print(f'grid dimensions: {dims}')\n",
+    "    print(f'grid dimensions: {dims}')'''\n",
     "    \n",
     "    # Calculate the starting and finishing cell indices based on the bounds of the mesh and the grid\n",
     "    # Calculate the starting and finishing cell indices based on the bounds of the mesh and the grid\n",
@@ -165,13 +165,13 @@
     "    ]\n",
     "\n",
     "    finishing_cell_index = [\n",
-    "        min(dims[0] - 1, int(np.ceil((mesh_bounds[1] - grid_bounds[0]) / voxel_size)) + 1),\n",
-    "        min(dims[1] - 1, int(np.ceil((mesh_bounds[3] - grid_bounds[2]) / voxel_size)) + 1),\n",
-    "        min(dims[2] - 1, int(np.ceil((mesh_bounds[5] - grid_bounds[4]) / voxel_size)) + 1)\n",
+    "        min(dims[0] - 2, int(np.ceil((mesh_bounds[1] - grid_bounds[0]) / voxel_size))),\n",
+    "        min(dims[1] - 2, int(np.ceil((mesh_bounds[3] - grid_bounds[2]) / voxel_size))),\n",
+    "        min(dims[2] - 2, int(np.ceil((mesh_bounds[5] - grid_bounds[4]) / voxel_size)))\n",
     "    ]\n",
-    "    print(f'starting_cell_index: {starting_cell_index}')\n",
+    "    #print(f'starting_cell_index: {starting_cell_index}')\n",
     "    \n",
-    "    print(f'finishing_cell_index: {finishing_cell_index}')\n",
+    "    #print(f'finishing_cell_index: {finishing_cell_index}')\n",
     "    \n",
     "    # Iterate through all cells in the grid from the starting to the finishing cell index\n",
     "    # and add the indices of cells that are not entirely encapsulated by the mesh to the list\n",
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def voxelize_space(meshes, mesh_info):\n",
     "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
     "    start_time = time.time()\n",
-    "    voxel_size = 0.8\n",
+    "    voxel_size = 0.2\n",
     "    # Step 1: Create a uniform grid within the bounds of all meshes\n",
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "    \n",
@@ -220,19 +220,18 @@
     "        \n",
     "        # Find the indices of the cells that fall into the bounds of the current mesh\n",
     "        cell_indices = find_cells_in_bounds(grid, mesh_bounds, voxel_size)\n",
-    "\n",
+    "        \n",
     "        cell_indices.sort()\n",
-    "        print(f'cell indices: {cell_indices}')\n",
     "\n",
     "        # Step 3: Use the cell indices to check which cells need further proofing\n",
     "        for cell_index in cell_indices:\n",
     "            cell = grid.extract_cells([cell_index])\n",
-    "            cell_bounds = cell.bounds\n",
+    "            #cell_bounds = cell.bounds\n",
     "\n",
-    "            if boxes_touch(mesh_bounds, cell_bounds):\n",
-    "                if not mask[cell_index]:\n",
-    "                    mask[cell_index] = True\n",
-    "                    cell_to_guid[cell_index] = guid\n",
+    "            #if boxes_touch(mesh_bounds, cell_bounds):\n",
+    "            if not mask[cell_index]:\n",
+    "                mask[cell_index] = True\n",
+    "                cell_to_guid[cell_index] = guid\n",
     "\n",
     "    end_time = time.time()\n",
     "\n",
@@ -250,58 +249,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to import ifc objects: -0.1166 seconds\n",
+      "Time taken to import ifc objects: -0.1088 seconds\n",
       "Time taken to create the initial grid: 0.0000 seconds\n",
-      "number of cells: 180\n",
-      "mesh bounds: (-2.306903294088416, 2.293096705911564, -2.659084903543768, 1.953415096456222, -0.48, 0.0)\n",
-      "voxel size: 0.8\n",
-      "grid bounds: (-2.3069032940884404, 2.4930967059115603, -2.679084903543776, 2.120915096456225, -0.48, 3.52)\n",
-      "grid dimensions: (7, 7, 6)\n",
-      "starting_cell_index: [0, 0, 0]\n",
-      "finishing_cell_index: [6, 6, 2]\n",
-      "cell indices: [0, 1, 2, 3, 4, 5, 6, 6, 7, 8, 9, 10, 11, 12, 12, 13, 14, 15, 16, 17, 18, 18, 19, 20, 21, 22, 23, 24, 24, 25, 26, 27, 28, 29, 30, 30, 31, 32, 33, 34, 35, 36, 36, 36, 37, 37, 38, 38, 39, 39, 40, 40, 41, 41, 42, 42, 42, 43, 44, 45, 46, 47, 48, 48, 49, 50, 51, 52, 53, 54, 54, 55, 56, 57, 58, 59, 60, 60, 61, 62, 63, 64, 65, 66, 66, 67, 68, 69, 70, 71, 72, 72, 72, 73, 73, 74, 74, 75, 75, 76, 76, 77, 77, 78, 78, 78, 79, 80, 81, 82, 83, 84, 84, 85, 86, 87, 88, 89, 90, 90, 91, 92, 93, 94, 95, 96, 96, 97, 98, 99, 100, 101, 102, 102, 103, 104, 105, 106, 107, 108, 108, 109, 110, 111, 112, 113, 114]\n",
-      "mesh bounds: (2.09309670591157, 2.2930967059115703, -2.65908490354378, 1.95341509645622, 0.0, 3.3000000000000003)\n",
-      "voxel size: 0.8\n",
-      "grid bounds: (-2.3069032940884404, 2.4930967059115603, -2.679084903543776, 2.120915096456225, -0.48, 3.52)\n",
-      "grid dimensions: (7, 7, 6)\n",
-      "starting_cell_index: [4, 0, 0]\n",
-      "finishing_cell_index: [6, 6, 5]\n",
-      "cell indices: [4, 5, 6, 10, 11, 12, 16, 17, 18, 22, 23, 24, 28, 29, 30, 34, 35, 36, 40, 40, 41, 41, 42, 42, 46, 47, 48, 52, 53, 54, 58, 59, 60, 64, 65, 66, 70, 71, 72, 76, 76, 77, 77, 78, 78, 82, 83, 84, 88, 89, 90, 94, 95, 96, 100, 101, 102, 106, 107, 108, 112, 112, 113, 113, 114, 114, 118, 119, 120, 124, 125, 126, 130, 131, 132, 136, 137, 138, 142, 143, 144, 148, 148, 149, 149, 150, 150, 154, 155, 156, 160, 161, 162, 166, 167, 168, 172, 173, 174, 178, 179, 180, 184, 184, 185, 185, 186, 186, 190, 191, 192, 196, 197, 198, 202, 203, 204, 208, 209, 210, 214, 215, 216, 220, 221, 222]\n",
-      "mesh bounds: (-2.3069032940884404, 2.09309670591156, -2.65908490354378, -2.5640849035437796, 0.0, 3.3000000000000003)\n",
-      "voxel size: 0.8\n",
-      "grid bounds: (-2.3069032940884404, 2.4930967059115603, -2.679084903543776, 2.120915096456225, -0.48, 3.52)\n",
-      "grid dimensions: (7, 7, 6)\n",
-      "starting_cell_index: [0, 0, 0]\n",
-      "finishing_cell_index: [6, 2, 5]\n",
-      "cell indices: [0, 1, 2, 3, 4, 5, 6, 6, 7, 8, 9, 10, 11, 12, 12, 13, 14, 15, 16, 17, 18, 36, 37, 38, 39, 40, 41, 42, 42, 43, 44, 45, 46, 47, 48, 48, 49, 50, 51, 52, 53, 54, 72, 73, 74, 75, 76, 77, 78, 78, 79, 80, 81, 82, 83, 84, 84, 85, 86, 87, 88, 89, 90, 108, 109, 110, 111, 112, 113, 114, 114, 115, 116, 117, 118, 119, 120, 120, 121, 122, 123, 124, 125, 126, 144, 145, 146, 147, 148, 149, 150, 150, 151, 152, 153, 154, 155, 156, 156, 157, 158, 159, 160, 161, 162, 180, 181, 182, 183, 184, 185, 186, 186, 187, 188, 189, 190, 191, 192, 192, 193, 194, 195, 196, 197, 198]\n",
-      "mesh bounds: (0.7480967059115599, 1.72809670591156, -2.679084903543776, -2.501084903543776, 0.0, 2.145)\n",
-      "voxel size: 0.8\n",
-      "grid bounds: (-2.3069032940884404, 2.4930967059115603, -2.679084903543776, 2.120915096456225, -0.48, 3.52)\n",
-      "grid dimensions: (7, 7, 6)\n",
-      "starting_cell_index: [2, 0, 0]\n",
-      "finishing_cell_index: [6, 2, 5]\n",
-      "cell indices: [2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 14, 15, 16, 17, 18, 38, 39, 40, 41, 42, 44, 45, 46, 47, 48, 50, 51, 52, 53, 54, 74, 75, 76, 77, 78, 80, 81, 82, 83, 84, 86, 87, 88, 89, 90, 110, 111, 112, 113, 114, 116, 117, 118, 119, 120, 122, 123, 124, 125, 126, 146, 147, 148, 149, 150, 152, 153, 154, 155, 156, 158, 159, 160, 161, 162, 182, 183, 184, 185, 186, 188, 189, 190, 191, 192, 194, 195, 196, 197, 198]\n",
-      "Time taken to voxelize: 0.4304 seconds\n",
-      "The indices that will be colored red with the mask: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 42, 48, 54, 66, 70, 71, 72, 78, 84, 90, 102, 106, 107, 108, 114, 120, 126, 138, 142, 143, 144, 150, 156, 162, 174, 178, 179]\n",
-      "end\n"
+      "number of cells: 10944\n",
+      "Time taken to voxelize: 4.7855 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecf624cea42e4516a890dbcfb5582f6b",
+       "model_id": "afff8d7c959f4752ae649b466576369a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:49946/index.html?ui=P_0x159004fe9b0_19&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:52439/index.html?ui=P_0x238ed9609a0_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -318,16 +287,12 @@
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
     "grid, mask, cell_info = voxelize_space(all_meshes, info)\n",
-    "xx = []\n",
-    "for x in range(len(mask)):\n",
-    "        if mask[x] == 1:\n",
-    "            xx.append(x)\n",
-    "print(f'The indices that will be colored red with the mask: {xx}')\n",
+    "\n",
     "# Visualization\n",
     "p.add_mesh(grid, opacity=0.3, show_edges=True)\n",
-    "print('end')\n",
+    "\n",
     "p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"red\", opacity=0.5)\n",
-    "p.add_point_labels(grid.cell_centers(), labels=[f\"{i}\" for i in range(grid.cell_centers().n_points)])\n",
+    "#p.add_point_labels(grid.cell_centers(), labels=[f\"{i}\" for i in range(grid.cell_centers().n_points)])\n",
     "\n",
     "p.show()\n"
    ]
