--- a/voxelization_cellcenters_multigrid.ipynb
+++ b/voxelization_cellcenters_multigrid.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,15 +31,14 @@
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
     "import ifcopenshell\n",
-    "import logging\n",
     "from importlib import reload \n",
     "import multiprocessing\n",
     "import ifcopenshell\n",
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
    ]
   },
   {
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
     "    # Generate an array of indices for insertions\n",
     "    indices = np.arange(3, 3 * (num_insertions + 1), 3)\n",
     "    indices = np.insert(indices, 0, 0)\n",
-    "    faces = np.insert(faces, indices, 3)\n",
+    "    faces = np.insert(faces, indices, 3) \n",
     "    return faces\n",
     "\n",
     "def vtk_block_by_building_element(ifc_file):\n",
@@ -78,15 +77,17 @@
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
     "    multiblock = pv.MultiBlock()\n",
+    "    multiblock_openings = pv.MultiBlock()\n",
+    "\n",
     "    element_information = {} # Dictionary to hold element information\n",
     "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
-    "\n",
+    "    \n",
     "    if iterator.initialize():\n",
     "        while True:\n",
     "            shape = iterator.get()\n",
     "            if shape.type not in exclude_list:\n",
     "                element = ifc_file.by_guid(shape.guid)\n",
-    "                           \n",
+    "                        \n",
     "                faces = shape.geometry.faces\n",
     "                verts = shape.geometry.verts\n",
     "                poly_data = pv.PolyData(list(verts), to_vtk_faces(faces))\n",
@@ -101,8 +102,8 @@
     "                    \"Name\": element.Name,\n",
     "                    \"Description\": element.Description\n",
     "                    }\n",
-    "                            \n",
-    "                       \n",
+    "\n",
+    "\n",
     "            if not iterator.next():\n",
     "                break\n",
     "                \n",
@@ -114,6 +115,7 @@
     "    y = np.arange(bounds[2], bounds[3] + voxel_size, voxel_size)\n",
     "    z = np.arange(bounds[4], bounds[5] + voxel_size, voxel_size)\n",
     "    return pv.StructuredGrid(*np.meshgrid(x, y, z))\n",
+    "\n",
     "\n",
     "def boxes_touch(A, B):\n",
     "    \"\"\"\n",
@@ -138,18 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def voxelize_space(meshes, voxel_size, mesh_info):\n",
+    "\n",
     "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
+    "    opening_list = [\"IfcDoor\", \"IfcWindow\"]\n",
+    "\n",
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "\n",
     "    num_points = grid.cell_centers().n_points\n",
-    "    print(grid.cell_centers())\n",
     "\n",
-    "    #mask = np.zeros(num_points, dtype=bool)\n",
     "    mask = np.zeros(num_points, dtype=bool)\n",
     "\n",
     "    cell_to_guid = {}\n",
@@ -159,20 +162,31 @@
     "    select_enclosed = vtk.vtkSelectEnclosedPoints()\n",
     "    \n",
     "    select_enclosed.SetInputData(grid.cell_centers())\n",
-    "       \n",
+    "\n",
     "    for guid, mesh_data in mesh_info.items():\n",
     "\n",
     "        mesh = mesh_data['Geo']\n",
+    "        mesh_type = mesh_data['Type']\n",
+    "        mesh_bounds = mesh.bounds\n",
+    "        \n",
     "        select_enclosed.SetSurfaceData(mesh)\n",
+    "\n",
     "        select_enclosed.Update()\n",
     "\n",
     "        for i in range(num_points):\n",
     "\n",
-    "            if not mask[i] and select_enclosed.IsInside(i):\n",
-    "                mask[i] = True\n",
-    "                cell_to_guid[i] = guid\n",
-    "            \n",
-    "                \n",
+    "            if mesh_type in opening_list:\n",
+    "                cell = grid.extract_cells(i)\n",
+    "                cell_bounds = cell.bounds   \n",
+    "                if boxes_touch(mesh_bounds, cell_bounds):\n",
+    "                    mask[i] = True\n",
+    "                    cell_to_guid[i] = guid\n",
+    "\n",
+    "            else:    \n",
+    "                if not mask[i] and select_enclosed.IsInside(i):\n",
+    "                    mask[i] = True\n",
+    "                    cell_to_guid[i] = guid\n",
+    "                    \n",
     "    return grid, mask, cell_to_guid"
    ]
   },
@@ -185,68 +199,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PolyData (0x28e8cdc52a0)\n",
-      "  N Cells:    16228128\n",
-      "  N Points:   16228128\n",
-      "  N Strips:   0\n",
-      "  X Bounds:   -2.165e-01, 9.033e+00\n",
-      "  Y Bounds:   -2.216e+01, 4.392e+00\n",
-      "  Z Bounds:   -1.525e+00, 6.625e+00\n",
-      "  N Arrays:   0\n",
-      "Total number of voxels: 16228128\n",
-      "Time taken to voxelize: 582.9910 seconds\n"
+      "Total number of voxels: 10944\n",
+      "Time taken to voxelize: 11.5355 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5661a8e08bb0432c8679fe474e36b589",
+       "model_id": "4858f72d139c4591a55ccc79c927f489",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52478/index.html?ui=P_0x28e8cb34640_4&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:53304/index.html?ui=P_0x19c98362f50_1&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nnum_points = grid.cell_centers().n_points\\n\\n# Calculate difference\\ndiff_mask = mask != mask2\\n\\n# Get indices where masks differ\\nindices = np.where(diff_mask)[0]\\n\\nmask_dif = np.zeros(num_points, dtype=bool)\\nfor n in range(num_points):\\n    if n in indices:\\n        mask_dif[n] = True'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_meshes, info = vtk_block_by_building_element(ifc_file)\n",
+    "meshes_all, info = vtk_block_by_building_element(ifc_file)\n",
     "\n",
     "p = pv.Plotter()\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "voxel_size = 0.05\n",
-    "\n",
+    "voxel_size = 0.2\n",
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
-    "grid, mask2, cell_info = voxelize_space(all_meshes, voxel_size, info)\n",
+    "grid, mask, cell_info = voxelize_space(meshes_all, voxel_size, info)\n",
+    "'''grid2, mask2, cell_info2 = voxelize_space(all_meshes, voxel_size/2, info)\n",
+    "grid3, mask3, cell_info3 = voxelize_space(all_meshes, voxel_size/4, info)'''\n",
     "\n",
-    "# Prepare to store cell-IFC-object mappings\n",
+    "'''# Prepare to store cell-IFC-object mappings\n",
     "cell_data = {}\n",
     "\n",
     "for cell_id, guid in cell_info.items():\n",
-    "    cell_data[cell_id] = info[guid]\n",
+    "    cell_data[cell_id] = info[guid]'''\n",
     "\n",
     "end_time = time.time()\n",
     "elapsed_time = end_time - start_time\n",
@@ -254,24 +251,11 @@
     "\n",
     "# Visualization\n",
     "p.add_mesh(grid, opacity=0.3, show_edges=True)\n",
-    "#p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"red\", opacity=0.7)\n",
-    " \n",
-    "p.add_mesh(grid.extract_cells(np.where(mask2)[0]), color=\"blue\", opacity=0.5)\n",
+    "\n",
+    "\n",
+    "p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"red\", opacity=0.5)\n",
+    "\n",
     "p.show()\n",
-    "'''\n",
-    "num_points = grid.cell_centers().n_points\n",
-    "\n",
-    "# Calculate difference\n",
-    "diff_mask = mask != mask2\n",
-    "\n",
-    "# Get indices where masks differ\n",
-    "indices = np.where(diff_mask)[0]\n",
-    "\n",
-    "mask_dif = np.zeros(num_points, dtype=bool)\n",
-    "for n in range(num_points):\n",
-    "    if n in indices:\n",
-    "        mask_dif[n] = True'''\n",
-    "\n",
     "\n"
    ]
   },
