--- a/voxelization_cellbounds.ipynb
+++ b/voxelization_cellbounds.ipynb
@@ -178,20 +178,18 @@
     "\n",
     "    print(f'Total number of voxels: {num_points}')\n",
     "\n",
-    "    for guid, mesh_data in mesh_info.items():\n",
     "\n",
-    "        mesh = mesh_data['Geo']\n",
+    "    for i in range(num_points):\n",
+    "        for guid, mesh_data in mesh_info.items():\n",
     "\n",
-    "        mesh_bounds = mesh.bounds\n",
-    "        \n",
-    "        for i in range(num_points):\n",
+    "            mesh = mesh_data['Geo']\n",
+    "\n",
+    "            mesh_bounds = mesh.bounds\n",
     "\n",
     "            cell = grid.extract_cells(i)\n",
     "            cell_bounds = cell.bounds         \n",
-    "\n",
-    "            \n",
-    "            if boxes_touch(mesh_bounds, cell_bounds):\n",
-    "                if not mask[i]:\n",
+    "            if not mask[i]:\n",
+    "                if boxes_touch(mesh_bounds, cell_bounds):\n",
     "                    mask[i] = True\n",
     "                    cell_to_guid[i] = guid          \n",
     "                            \n",
@@ -214,25 +212,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1694338511.8931875\n",
-      "1694338512.0009153\n",
-      "Total number of voxels: 10944\n",
-      "Time taken to voxelize: 46.1988 seconds\n"
+      "1694601226.0606973\n",
+      "1694601226.196198\n",
+      "Total number of voxels: 10944\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0367fcb5629244faa0cdf8200362928d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52529/index.html?ui=P_0x1fe1daf11b0_0&reconnect=auto' style='width…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\voxelization_cellbounds.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m voxel_size \u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Voxelize the entire space of the combined mesh\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m grid, mask2, cell_info \u001b[39m=\u001b[39m voxelize_space(all_meshes, voxel_size, info)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m end_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m'''# Prepare to store cell-IFC-object mappings\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mcell_data = {}\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mfor cell_id, guid in cell_info.items():\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m    cell_data[cell_id] = info[guid]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\voxelization_cellbounds.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mesh \u001b[39m=\u001b[39m mesh_data[\u001b[39m'\u001b[39m\u001b[39mGeo\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m mesh_bounds \u001b[39m=\u001b[39m mesh\u001b[39m.\u001b[39mbounds\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m cell \u001b[39m=\u001b[39m grid\u001b[39m.\u001b[39;49mextract_cells(i)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m cell_bounds \u001b[39m=\u001b[39m cell\u001b[39m.\u001b[39mbounds         \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m mask[i]:\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\filters\\data_set.py:4549\u001b[0m, in \u001b[0;36mDataSetFilters.extract_cells\u001b[1;34m(self, ind, invert, progress_bar)\u001b[0m\n\u001b[0;32m   4547\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpoints\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mdtype(\u001b[39m'\u001b[39m\u001b[39mfloat32\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m   4548\u001b[0m         ind \u001b[39m=\u001b[39m subgrid\u001b[39m.\u001b[39mpoint_data[\u001b[39m'\u001b[39m\u001b[39mvtkOriginalPointIds\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m-> 4549\u001b[0m         subgrid\u001b[39m.\u001b[39mpoints \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpoints[ind]\n\u001b[0;32m   4551\u001b[0m \u001b[39mreturn\u001b[39;00m subgrid\n",
+      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\pyvista_ndarray.py:81\u001b[0m, in \u001b[0;36mpyvista_ndarray.__array_finalize__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[39m# this is necessary to ensure that views/slices of pyvista_ndarray\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[39m# objects stay associated with those of their parents.\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[39m# convention, but here we just map those over to the appropriate\u001b[39;00m\n\u001b[0;32m     79\u001b[0m \u001b[39m# attributes of this class\u001b[39;00m\n\u001b[0;32m     80\u001b[0m _vtk\u001b[39m.\u001b[39mVTKArray\u001b[39m.\u001b[39m__array_finalize__(\u001b[39mself\u001b[39m, obj)\n\u001b[1;32m---> 81\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39;49mshares_memory(\u001b[39mself\u001b[39;49m, obj):\n\u001b[0;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39mdataset\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     83\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39massociation \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39massociation\u001b[39m\u001b[39m'\u001b[39m, FieldAssociation\u001b[39m.\u001b[39mNONE)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
