--- a/voxelization_cellcenters-corners.ipynb
+++ b/voxelization_cellcenters-corners.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,6 @@
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "\n",
     "    num_points = grid.cell_centers().n_points\n",
-    "    print(grid.cell_centers())\n",
     "\n",
     "    #mask = np.zeros(num_points, dtype=bool)\n",
     "    mask = np.zeros(num_points, dtype=bool)\n",
@@ -157,20 +156,34 @@
     "    print(f'Total number of voxels: {num_points}')\n",
     "\n",
     "    select_enclosed = vtk.vtkSelectEnclosedPoints()\n",
+    "    select_enclosed_corners = vtk.vtkSelectEnclosedPoints()\n",
     "    \n",
     "    select_enclosed.SetInputData(grid.cell_centers())\n",
+    "    \n",
     "       \n",
     "    for guid, mesh_data in mesh_info.items():\n",
     "\n",
     "        mesh = mesh_data['Geo']\n",
     "        select_enclosed.SetSurfaceData(mesh)\n",
+    "        select_enclosed_corners.SetSurfaceData(mesh)\n",
     "        select_enclosed.Update()\n",
+    "        \n",
     "\n",
     "        for i in range(num_points):\n",
     "\n",
     "            if not mask[i] and select_enclosed.IsInside(i):\n",
     "                mask[i] = True\n",
     "                cell_to_guid[i] = guid\n",
+    "\n",
+    "            else:\n",
+    "                corners = grid.get_cell(i).points\n",
+    "                corners_polydata = pv.PolyData(corners)\n",
+    "                select_enclosed_corners.SetInputData(corners_polydata)\n",
+    "                select_enclosed_corners.Update()\n",
+    "\n",
+    "                for corner_index in range(len(corners)):\n",
+    "                    if not mask[i] and select_enclosed_corners.IsInside(corner_index):\n",
+    "                        mask[i] = True\n",
     "            \n",
     "                \n",
     "    return grid, mask, cell_to_guid"
@@ -185,34 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PolyData (0x28e8cdc52a0)\n",
-      "  N Cells:    16228128\n",
-      "  N Points:   16228128\n",
-      "  N Strips:   0\n",
-      "  X Bounds:   -2.165e-01, 9.033e+00\n",
-      "  Y Bounds:   -2.216e+01, 4.392e+00\n",
-      "  Z Bounds:   -1.525e+00, 6.625e+00\n",
-      "  N Arrays:   0\n",
-      "Total number of voxels: 16228128\n",
-      "Time taken to voxelize: 582.9910 seconds\n"
+      "Total number of voxels: 10944\n",
+      "Time taken to voxelize: 15.1738 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5661a8e08bb0432c8679fe474e36b589",
+       "model_id": "ad627e42376145caaa7a74e3049055ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52478/index.html?ui=P_0x28e8cb34640_4&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:52899/index.html?ui=P_0x2191a7b7c40_3&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -224,7 +229,7 @@
        "'\\nnum_points = grid.cell_centers().n_points\\n\\n# Calculate difference\\ndiff_mask = mask != mask2\\n\\n# Get indices where masks differ\\nindices = np.where(diff_mask)[0]\\n\\nmask_dif = np.zeros(num_points, dtype=bool)\\nfor n in range(num_points):\\n    if n in indices:\\n        mask_dif[n] = True'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +241,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "voxel_size = 0.05\n",
+    "voxel_size = 0.2\n",
     "\n",
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
