--- a/voxelization_cellcenters.ipynb
+++ b/voxelization_cellcenters.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,9 @@
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")"
    ]
   },
   {
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "\n",
     "    num_points = grid.cell_centers().n_points\n",
-    "    print(grid.cell_centers())\n",
+    "    #print(grid.cell_centers())\n",
     "\n",
     "    #mask = np.zeros(num_points, dtype=bool)\n",
     "    mask = np.zeros(num_points, dtype=bool)\n",
@@ -185,34 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PolyData (0x28e8cdc52a0)\n",
-      "  N Cells:    16228128\n",
-      "  N Points:   16228128\n",
-      "  N Strips:   0\n",
-      "  X Bounds:   -2.165e-01, 9.033e+00\n",
-      "  Y Bounds:   -2.216e+01, 4.392e+00\n",
-      "  Z Bounds:   -1.525e+00, 6.625e+00\n",
-      "  N Arrays:   0\n",
-      "Total number of voxels: 16228128\n",
-      "Time taken to voxelize: 582.9910 seconds\n"
+      "Total number of voxels: 10944\n",
+      "Time taken to voxelize: 0.0660 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5661a8e08bb0432c8679fe474e36b589",
+       "model_id": "f90875038d8d424e988f579a9b09f10b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:52478/index.html?ui=P_0x28e8cb34640_4&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:51611/index.html?ui=P_0x1a38b81ebf0_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -224,7 +217,7 @@
        "'\\nnum_points = grid.cell_centers().n_points\\n\\n# Calculate difference\\ndiff_mask = mask != mask2\\n\\n# Get indices where masks differ\\nindices = np.where(diff_mask)[0]\\n\\nmask_dif = np.zeros(num_points, dtype=bool)\\nfor n in range(num_points):\\n    if n in indices:\\n        mask_dif[n] = True'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,17 +229,17 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "voxel_size = 0.05\n",
+    "voxel_size = 0.2\n",
     "\n",
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
     "grid, mask2, cell_info = voxelize_space(all_meshes, voxel_size, info)\n",
     "\n",
     "# Prepare to store cell-IFC-object mappings\n",
-    "cell_data = {}\n",
+    "'''cell_data = {}\n",
     "\n",
     "for cell_id, guid in cell_info.items():\n",
-    "    cell_data[cell_id] = info[guid]\n",
+    "    cell_data[cell_id] = info[guid]'''\n",
     "\n",
     "end_time = time.time()\n",
     "elapsed_time = end_time - start_time\n",
@@ -270,9 +263,7 @@
     "mask_dif = np.zeros(num_points, dtype=bool)\n",
     "for n in range(num_points):\n",
     "    if n in indices:\n",
-    "        mask_dif[n] = True'''\n",
-    "\n",
-    "\n"
+    "        mask_dif[n] = True'''"
    ]
   },
   {
