--- a/voxelization_cellbounds.ipynb
+++ b/voxelization_cellbounds.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,31 +205,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1694601226.0606973\n",
-      "1694601226.196198\n",
-      "Total number of voxels: 10944\n"
+      "1694602989.4586504\n",
+      "1694602989.661574\n",
+      "Total number of voxels: 800\n",
+      "Time taken to voxelize: 3.5139 seconds\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\voxelization_cellbounds.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m voxel_size \u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Voxelize the entire space of the combined mesh\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m grid, mask2, cell_info \u001b[39m=\u001b[39m voxelize_space(all_meshes, voxel_size, info)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m end_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m'''# Prepare to store cell-IFC-object mappings\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mcell_data = {}\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mfor cell_id, guid in cell_info.items():\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m    cell_data[cell_id] = info[guid]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\voxelization_cellbounds.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mesh \u001b[39m=\u001b[39m mesh_data[\u001b[39m'\u001b[39m\u001b[39mGeo\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m mesh_bounds \u001b[39m=\u001b[39m mesh\u001b[39m.\u001b[39mbounds\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m cell \u001b[39m=\u001b[39m grid\u001b[39m.\u001b[39;49mextract_cells(i)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m cell_bounds \u001b[39m=\u001b[39m cell\u001b[39m.\u001b[39mbounds         \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cemre/Repos/Ifc-Voxelization/voxelization_cellbounds.ipynb#X13sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m mask[i]:\n",
-      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\filters\\data_set.py:4549\u001b[0m, in \u001b[0;36mDataSetFilters.extract_cells\u001b[1;34m(self, ind, invert, progress_bar)\u001b[0m\n\u001b[0;32m   4547\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpoints\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mdtype(\u001b[39m'\u001b[39m\u001b[39mfloat32\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m   4548\u001b[0m         ind \u001b[39m=\u001b[39m subgrid\u001b[39m.\u001b[39mpoint_data[\u001b[39m'\u001b[39m\u001b[39mvtkOriginalPointIds\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m-> 4549\u001b[0m         subgrid\u001b[39m.\u001b[39mpoints \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpoints[ind]\n\u001b[0;32m   4551\u001b[0m \u001b[39mreturn\u001b[39;00m subgrid\n",
-      "File \u001b[1;32mc:\\Users\\cemre\\Repos\\Ifc-Voxelization\\.venv\\lib\\site-packages\\pyvista\\core\\pyvista_ndarray.py:81\u001b[0m, in \u001b[0;36mpyvista_ndarray.__array_finalize__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[39m# this is necessary to ensure that views/slices of pyvista_ndarray\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[39m# objects stay associated with those of their parents.\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[39m# convention, but here we just map those over to the appropriate\u001b[39;00m\n\u001b[0;32m     79\u001b[0m \u001b[39m# attributes of this class\u001b[39;00m\n\u001b[0;32m     80\u001b[0m _vtk\u001b[39m.\u001b[39mVTKArray\u001b[39m.\u001b[39m__array_finalize__(\u001b[39mself\u001b[39m, obj)\n\u001b[1;32m---> 81\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39;49mshares_memory(\u001b[39mself\u001b[39;49m, obj):\n\u001b[0;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39mdataset\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     83\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39massociation \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, \u001b[39m'\u001b[39m\u001b[39massociation\u001b[39m\u001b[39m'\u001b[39m, FieldAssociation\u001b[39m.\u001b[39mNONE)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07e64b1e56cb436086fda0dc375ee286",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:53716/index.html?ui=P_0x24fd69f33a0_1&reconnect=auto' style='width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -243,7 +244,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "voxel_size = 0.2\n",
+    "voxel_size = 0.5\n",
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
     "grid, mask2, cell_info = voxelize_space(all_meshes, voxel_size, info)\n",
