--- a/voxelization_cellcenters_bounds.ipynb
+++ b/voxelization_cellcenters_bounds.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,8 @@
     "import time\n",
     "import vtk\n",
     "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Logging setup:"
    ]
   },
   {
@@ -57,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,15 +129,8 @@
     "    overlap_z = A[4] <= B[5] and A[5] >= B[4]\n",
     "    \n",
     "    # Return True if all dimensions overlap, otherwise False\n",
-    "    return overlap_x and overlap_y and overlap_z\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return overlap_x and overlap_y and overlap_z\n",
+    "\n",
     "def voxelize_space(meshes, voxel_size, mesh_info):\n",
     "\n",
     "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
@@ -164,7 +151,6 @@
     "    select_enclosed.SetInputData(grid.cell_centers())\n",
     "\n",
     "    for guid, mesh_data in mesh_info.items():\n",
-    "\n",
     "        mesh = mesh_data['Geo']\n",
     "        mesh_type = mesh_data['Type']\n",
     "        mesh_bounds = mesh.bounds\n",
@@ -174,16 +160,16 @@
     "        select_enclosed.Update()\n",
     "\n",
     "        for i in range(num_points):\n",
-    "\n",
     "            if mesh_type in opening_list:\n",
     "                cell = grid.extract_cells(i)\n",
     "                cell_bounds = cell.bounds   \n",
+    "\n",
     "                if boxes_touch(mesh_bounds, cell_bounds):\n",
     "                    mask[i] = True\n",
     "                    cell_to_guid[i] = guid\n",
-    "\n",
     "            else:    \n",
     "                if not mask[i] and select_enclosed.IsInside(i):\n",
+    "                    \n",
     "                    mask[i] = True\n",
     "                    cell_to_guid[i] = guid\n",
     "                    \n",
@@ -199,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,18 +193,18 @@
      "output_type": "stream",
      "text": [
       "Total number of voxels: 10944\n",
-      "Time taken to voxelize: 11.5355 seconds\n"
+      "Time taken to voxelize: 19.0055 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4858f72d139c4591a55ccc79c927f489",
+       "model_id": "e0dd6ab592194efbbe34607bf9f98664",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:53304/index.html?ui=P_0x19c98362f50_1&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:51824/index.html?ui=P_0x22bb1a9fc10_2&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -236,14 +222,7 @@
     "\n",
     "# Voxelize the entire space of the combined mesh\n",
     "grid, mask, cell_info = voxelize_space(meshes_all, voxel_size, info)\n",
-    "'''grid2, mask2, cell_info2 = voxelize_space(all_meshes, voxel_size/2, info)\n",
-    "grid3, mask3, cell_info3 = voxelize_space(all_meshes, voxel_size/4, info)'''\n",
     "\n",
-    "'''# Prepare to store cell-IFC-object mappings\n",
-    "cell_data = {}\n",
-    "\n",
-    "for cell_id, guid in cell_info.items():\n",
-    "    cell_data[cell_id] = info[guid]'''\n",
     "\n",
     "end_time = time.time()\n",
     "elapsed_time = end_time - start_time\n",
@@ -252,11 +231,9 @@
     "# Visualization\n",
     "p.add_mesh(grid, opacity=0.3, show_edges=True)\n",
     "\n",
-    "\n",
     "p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"red\", opacity=0.5)\n",
     "\n",
-    "p.show()\n",
-    "\n"
+    "p.show()"
    ]
   },
   {
