--- a/voxelization_cellcenters.ipynb
+++ b/voxelization_cellcenters.ipynb
@@ -22,35 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyvista as pv\n",
-    "import numpy as np\n",
-    "from typing import Any, Tuple\n",
-    "import ifcopenshell\n",
-    "import logging\n",
-    "from importlib import reload \n",
-    "import multiprocessing\n",
-    "import ifcopenshell\n",
-    "import ifcopenshell.geom\n",
-    "import time\n",
-    "import vtk\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Logging setup:"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,55 +30,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyvista as pv\n",
+    "import numpy as np\n",
+    "from typing import Any, Tuple\n",
+    "import ifcopenshell\n",
+    "from importlib import reload \n",
+    "import multiprocessing\n",
+    "import ifcopenshell\n",
+    "import ifcopenshell.geom\n",
+    "import time\n",
+    "from functools import reduce\n",
+    "import vtk\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
+    "\n",
     "    faces=np.array(faces, dtype=np.int16)\n",
     "    num_insertions = (len(faces) - 1) // 3\n",
+    "\n",
     "    # Generate an array of indices for insertions\n",
     "    indices = np.arange(3, 3 * (num_insertions + 1), 3)\n",
     "    indices = np.insert(indices, 0, 0)\n",
-    "    faces = np.insert(faces, indices, 3)\n",
+    "    faces = np.insert(faces, indices, 3) \n",
     "    return faces\n",
     "\n",
     "def vtk_block_by_building_element(ifc_file):\n",
-    "    building_elements = ifc_file.by_type(\"IfcBuildingElement\")\n",
     "    settings = ifcopenshell.geom.settings()\n",
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    multiblock = pv.MultiBlock()\n",
-    "    element_information = {} # Dictionary to hold element information\n",
     "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
+    "    multiblock = pv.MultiBlock()\n",
     "\n",
     "    if iterator.initialize():\n",
+    "        polydata_list = []\n",
     "        while True:\n",
     "            shape = iterator.get()\n",
     "            if shape.type not in exclude_list:\n",
-    "                element = ifc_file.by_guid(shape.guid)\n",
-    "                           \n",
     "                faces = shape.geometry.faces\n",
     "                verts = shape.geometry.verts\n",
     "                poly_data = pv.PolyData(list(verts), to_vtk_faces(faces))\n",
     "                multiblock.append(poly_data)\n",
-    "                  \n",
-    "                if element in building_elements:\n",
-    "                #print(element.all_attributes()) --> why doesn't it work?\n",
-    "                        \n",
-    "                    element_information[shape.guid] = {\n",
-    "                    \"Geo\": poly_data, \n",
-    "                    \"Type\": shape.type,\n",
-    "                    \"Name\": element.Name,\n",
-    "                    \"Description\": element.Description\n",
-    "                    }\n",
-    "                            \n",
-    "                       \n",
+    "                #polydata_list.append(poly_data)\n",
+    "                \n",
     "            if not iterator.next():\n",
     "                break\n",
-    "                \n",
-    "    return multiblock, element_information\n",
+    "\n",
+    "    #merged = reduce(lambda acc, x: acc.merge(x), polydata_list)\n",
+    "               \n",
+    "    return multiblock\n",
     "\n",
     "def create_uniform_grid(bounds, voxel_size):\n",
     "    \"\"\"Create a uniform grid within the given bounds.\"\"\"\n",
@@ -116,65 +93,30 @@
     "    z = np.arange(bounds[4], bounds[5] + voxel_size, voxel_size)\n",
     "    return pv.StructuredGrid(*np.meshgrid(x, y, z))\n",
     "\n",
-    "def boxes_touch(A, B):\n",
-    "    \"\"\"\n",
-    "    Check if two 3D bounding boxes touch or overlap.\n",
+    "def voxelize_space(meshes, voxel_size):\n",
     "    \n",
-    "    Parameters:\n",
-    "    - A, B: Tuples representing the bounds of boxes A and B.\n",
-    "      Each tuple should be in the format (xmin, xmax, ymin, ymax, zmin, zmax).\n",
-    "    \n",
-    "    Returns:\n",
-    "    - True if the boxes touch or overlap, otherwise False.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Check for overlap in the x, y, and z dimensions\n",
-    "    overlap_x = A[0] <= B[1] and A[1] >= B[0]\n",
-    "    overlap_y = A[2] <= B[3] and A[3] >= B[2]\n",
-    "    overlap_z = A[4] <= B[5] and A[5] >= B[4]\n",
-    "    \n",
-    "    # Return True if all dimensions overlap, otherwise False\n",
-    "    return overlap_x and overlap_y and overlap_z\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def voxelize_space(meshes, voxel_size, mesh_info):\n",
     "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
+    "\n",
     "    grid = create_uniform_grid(meshes.bounds, voxel_size)\n",
     "\n",
     "    num_points = grid.cell_centers().n_points\n",
-    "    #print(grid.cell_centers())\n",
     "\n",
-    "    #mask = np.zeros(num_points, dtype=bool)\n",
     "    mask = np.zeros(num_points, dtype=bool)\n",
-    "\n",
-    "    cell_to_guid = {}\n",
     "\n",
     "    print(f'Total number of voxels: {num_points}')\n",
     "\n",
     "    select_enclosed = vtk.vtkSelectEnclosedPoints()\n",
-    "    \n",
     "    select_enclosed.SetInputData(grid.cell_centers())\n",
-    "       \n",
-    "    for guid, mesh_data in mesh_info.items():\n",
     "\n",
-    "        mesh = mesh_data['Geo']\n",
+    "    #lambda function to check each mesh in the multiblock against the grid\n",
+    "    for mesh in meshes:\n",
     "        select_enclosed.SetSurfaceData(mesh)\n",
     "        select_enclosed.Update()\n",
-    "\n",
-    "        for i in range(num_points):\n",
-    "\n",
-    "            if not mask[i] and select_enclosed.IsInside(i):\n",
-    "                mask[i] = True\n",
-    "                cell_to_guid[i] = guid\n",
-    "            \n",
-    "                \n",
-    "    return grid, mask, cell_to_guid"
+    "        # write a lambda function to check if a point is inside the mesh\n",
+    "        # and use it to set the mask\n",
+    "        mask = np.logical_or(mask, np.array([select_enclosed.IsInside(i) for i in range(num_points)]))\n",
+    "    \n",
+    "    return grid, mask\n"
    ]
   },
   {
@@ -186,84 +128,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert IFC objects into vtk meshes\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "all_meshes = vtk_block_by_building_element(ifc_file)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "print(f\"Time taken to convert objects: {end_time - start_time:.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of voxels: 10944\n",
-      "Time taken to voxelize: 0.0660 seconds\n"
+      "Time taken to convert objects: 36.3149 seconds\n",
+      "Total number of voxels: 104082\n",
+      "Time taken to voxelize: 100.2455 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f90875038d8d424e988f579a9b09f10b",
+       "model_id": "d083084d3c5843dca9aec2dc9e781885",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:51611/index.html?ui=P_0x1a38b81ebf0_0&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:51612/index.html?ui=P_0x1f60c662f20_22&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nnum_points = grid.cell_centers().n_points\\n\\n# Calculate difference\\ndiff_mask = mask != mask2\\n\\n# Get indices where masks differ\\nindices = np.where(diff_mask)[0]\\n\\nmask_dif = np.zeros(num_points, dtype=bool)\\nfor n in range(num_points):\\n    if n in indices:\\n        mask_dif[n] = True'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_meshes, info = vtk_block_by_building_element(ifc_file)\n",
-    "\n",
-    "p = pv.Plotter()\n",
+    "# Voxelize the entire space and check for intersections with the meshes\n",
+    "voxel_size = 0.8\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "voxel_size = 0.2\n",
-    "\n",
-    "\n",
-    "# Voxelize the entire space of the combined mesh\n",
-    "grid, mask2, cell_info = voxelize_space(all_meshes, voxel_size, info)\n",
-    "\n",
-    "# Prepare to store cell-IFC-object mappings\n",
-    "'''cell_data = {}\n",
-    "\n",
-    "for cell_id, guid in cell_info.items():\n",
-    "    cell_data[cell_id] = info[guid]'''\n",
+    "grid, mask = voxelize_space(all_meshes, voxel_size)\n",
     "\n",
     "end_time = time.time()\n",
-    "elapsed_time = end_time - start_time\n",
-    "print(f\"Time taken to voxelize: {elapsed_time:.4f} seconds\")\n",
+    "print(f\"Time taken to voxelize: {end_time - start_time:.4f} seconds\")\n",
     "\n",
     "# Visualization\n",
-    "p.add_mesh(grid, opacity=0.3, show_edges=True)\n",
-    "#p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"red\", opacity=0.7)\n",
-    " \n",
-    "p.add_mesh(grid.extract_cells(np.where(mask2)[0]), color=\"blue\", opacity=0.5)\n",
-    "p.show()\n",
-    "'''\n",
-    "num_points = grid.cell_centers().n_points\n",
-    "\n",
-    "# Calculate difference\n",
-    "diff_mask = mask != mask2\n",
-    "\n",
-    "# Get indices where masks differ\n",
-    "indices = np.where(diff_mask)[0]\n",
-    "\n",
-    "mask_dif = np.zeros(num_points, dtype=bool)\n",
-    "for n in range(num_points):\n",
-    "    if n in indices:\n",
-    "        mask_dif[n] = True'''"
+    "p = pv.Plotter()\n",
+    "p.add_mesh(grid, opacity=0.3, show_edges=True) \n",
+    "p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", opacity=0.5)\n",
+    "p.show()"
    ]
   },
   {
