--- a/voxelization_cellcenters_bounds.ipynb
+++ b/voxelization_cellcenters_bounds.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
-    "    faces=np.array(faces, dtype=np.int16)\n",
-    "    num_insertions = (len(faces) - 1) // 3\n",
-    "    # Generate an array of indices for insertions\n",
-    "    indices = np.arange(3, 3 * (num_insertions + 1), 3)\n",
-    "    indices = np.insert(indices, 0, 0)\n",
-    "    faces = np.insert(faces, indices, 3) \n",
-    "    return faces\n",
+    "\n",
     "\n",
     "def vtk_block_by_building_element(ifc_file):\n",
     "    building_elements = ifc_file.by_type(\"IfcBuildingElement\")\n",
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,18 +186,18 @@
      "output_type": "stream",
      "text": [
       "Total number of voxels: 10944\n",
-      "Time taken to voxelize: 19.0055 seconds\n"
+      "Time taken to voxelize: 20.9682 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0dd6ab592194efbbe34607bf9f98664",
+       "model_id": "c91817eaae8e496495fe0c1a847160a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:51824/index.html?ui=P_0x22bb1a9fc10_2&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:50566/index.html?ui=P_0x2ba7d242b00_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
