--- a/voxelization_cellcenters.ipynb
+++ b/voxelization_cellcenters.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
     "from functools import reduce\n",
     "import vtk\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -128,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to convert objects: 3.9078 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# convert IFC objects into vtk meshes\n",
     "\n",
@@ -144,27 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 36.3149 seconds\n",
-      "Total number of voxels: 104082\n",
-      "Time taken to voxelize: 100.2455 seconds\n"
+      "Total number of voxels: 2028516\n",
+      "Time taken to voxelize: 118.8157 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d083084d3c5843dca9aec2dc9e781885",
+       "model_id": "9bba404a478f461bb34eefa3b2dbc114",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:51612/index.html?ui=P_0x1f60c662f20_22&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:51612/index.html?ui=P_0x1f5befadb40_24&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -173,7 +180,7 @@
    ],
    "source": [
     "# Voxelize the entire space and check for intersections with the meshes\n",
-    "voxel_size = 0.8\n",
+    "voxel_size = 0.1\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
