New Folder Structure

--- a/voxelization_cellcenters_octree.ipynb
+++ b/voxelization_cellcenters_octree.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,15 @@
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
-    "    include_list = [\"IfcWall\", \"IfcSlab\", \"IfcWallStandardCase\"]\n",
+    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\", \"IfcWindow\", \"IfcDoor\"]\n",
+    "    \n",
     "    multiblock = pv.MultiBlock()\n",
     "\n",
     "    if iterator.initialize():\n",
     "\n",
     "        while True:\n",
     "            shape = iterator.get()\n",
-    "            if shape.type in include_list:\n",
+    "            if shape.type not in exclude_list:\n",
     "                faces = shape.geometry.faces\n",
     "                verts = shape.geometry.verts\n",
     "                poly_data = pv.PolyData(list(verts), to_vtk_faces(faces))\n",
@@ -169,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to convert objects: 24.4697 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
@@ -195,26 +203,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of voxels: 1870246\n",
-      "Time taken to voxelize: 37.7955 seconds\n"
+      "Total number of voxels: 422940\n",
+      "Time taken to voxelize: 276.4532 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efeb6cbbab4145a8b23b3e3156ef706c",
+       "model_id": "52b300b2de0d48a49d221de20046f6ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:53058/index.html?ui=P_0x28729430190_15&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:53772/index.html?ui=P_0x1ecaaef1930_2&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
