--- a/voxelization_cellcenters_octree.ipynb
+++ b/voxelization_cellcenters_octree.ipynb
@@ -254,7 +254,7 @@
     "for grid, mask in voxelized_representation:\n",
     "    p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", show_edges=True, opacity=0.5)\n",
     "\n",
-    "p.show()"
+    "p.show()\n"
    ]
   },
   {
